--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -205,7 +205,23 @@ As it showed promising results in other applications of Deep Learning to \gls{ph
 \end{figure}
 
 
-To prepare the data for the \gls{cnn} and \glspl{rnn} models a sliding window approach was used. This approach maps the \gls{rul} at time $ t_i $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sequence. The resulting input matrix therefore has the dimension $ k \times N $ where $ k $ is the number of features.
+To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sliding window. The resulting input matrix therefore has the dimension $ (n-N) \times N \times k $ where $ n $ is the number of samples and $ k $ is the number of features. Figure \ref{fig:input_matrix} shows an example of how the time series data of the strain gauges from Table \ref{tab:sliding_window_approach} is mapped to the input matrix.
+
+\begin{figure}[htp]
+	\centering
+	\input{images/input_matrix.tex}
+	\caption{Input matrix for the neural networks}
+	\label{fig:input_matrix}
+\end{figure}
+
+The output matrix shown in Figure \ref{fig:output_matrix} is only one dimensional. It is only composed of the \gls{rul} bins which are mapped to the corresponding rows in the input matrix the dimension therefore is $ (n-N) $.
+
+\begin{figure}[htp]
+	\centering
+	\input{images/output_matrix.tex}
+	\caption{Input matrix for the neural networks}
+	\label{fig:output_matrix}
+\end{figure}
 
 As an input for the different models, datasets had to be normalized. While a specific layer was added at the beggining of \gls{cnn} and \gls{tcn} architectures to do so, the preprocessed data had to be normalized before being fed to the \glspl{rnn} models.
 
@@ -361,7 +377,7 @@ Table \ref{tab:fixed_parameters_cnn_optimization} lists the fixed parameters of 
 	\caption{Fixed parameters for vanilla \gls{cnn} hyperparameter optimization}
 	\label{tab:fixed_parameters_cnn_optimization}
 	\begin{tabular}{ll}
-		\boldsymbol{Parameter} & \boldsymbol{Value} \\
+		\textbf{Parameter} & \textbf{Value} \\
 		\hline
 		Batch size & $ 4096 $ \\
 		Sliding window length & $ \{5, 10, 15, 20, 30, 40\} $ \\
@@ -378,7 +394,7 @@ Table \ref{tab:variable_parameters_cnn_optimization} lists the variable paramete
 	\caption{Variable parameters for vanilla \gls{cnn} hyperparameter optimization}
 	\label{tab:variable_parameters_cnn_optimization}
 	\begin{tabular}{ll}
-		\boldsymbol{Parameter} & \boldsymbol{Value set} \\
+		\textbf{Parameter} & \textbf{Value set} \\
 		\hline
 		Number of convolutional layers & $ \{2, 4, 6, 8\} $ \\
 		Number of filters per layer & $ \{15, 20, 25, 30, 35, 40, 45, 50\} $ \\
